<resources>
    <string name="app_name">TheArena</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">The Arena</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="enter_a_password">Enter your password</string>
    <string name="enter_a_user_name">Enter your username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_an_email">Enter your email address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="title_activity_maps">Map</string>
    <string name="back">Back</string>
    <string name="title_activity_new_maps">Map</string>
    <string name="birthdate">BirthDate</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="menu">menu</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_to_the_arena">Enter to the Arena</string>
    <string name="choose_image">Choose Image</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="block">Block</string>
    <string name="profile_picture">Profile picture</string>
</resources>