<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sec_drawerHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/sec_drawerHeaderProfilePic"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/selected_user_info_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sec_drawerHeaderProfilePic"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sec_drawerHeaderUserFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sec_drawerHeaderUserLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="62dp" />

            <Button
                android:id="@+id/selected_user_block_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/editbox_background"
                android:backgroundTint="#FF7043"
                android:text="@string/block"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sec_drawerHeaderUserAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="62dp" />

            <Button
                android:id="@+id/selected_user_whatsApp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:backgroundTint="#4CAF50"
                android:text="@string/whatsapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/selected_user_photos_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_user_info_panel">


<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/selected_user_recycle_view_container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>